--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,24 @@
   ],
   "routes": [
     {
-      "src": "/summarize",
-      "dest": "index.js"
+      "src": "/script.js",
+      "dest": "public/script.js"
+    },
+    {
+      "src": "/stylesheet.css",
+      "dest": "public/stylesheet.css"
+    },
+    {
+      "src": "/",
+      "dest": "public/index.html"
     },
     {
       "src": "/.*",
-      "dest": "public/index.html"
+      "dest": "public/$0"
+    },
+    {
+      "src": "/summarize",
+      "dest": "index.js"
     }
   ]
 }
