--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,22 @@
   ],
   "routes": [
     {
+      "src": "/script.js",
+      "dest": "public/script.js"
+    },
+    {
+      "src": "/stylesheet.css",
+      "dest": "public/stylesheet.css"
+    },
+    {
+      "src": "/",
+      "dest": "public/index.html"
+    },
+    {
+      "src": "/.*",
+      "dest": "public/$0"
+    },
+    {
       "src": "/summarize",
       "dest": "index.js"
     }
